--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ TYPEORM_ENTITIES_DIR=src/models
 TYPEORM_MIGRATIONS=src/migrations/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/migrations
 
-GRPC_URL:host.docker.interla:50051
+GRPC_URL=host.docker.internal:50051
