feat(transactions): add transactions process

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ TYPEORM_MIGRATIONS=src/migrations/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/migrations
 
 GRPC_URL=host.docker.internal:50051
+
+KAFKA_CLIENT_ID=codepix
+KAFKA_BROKER=host.docker.internal:9094
+KAFKA_CONSUMER_GROUP_ID=
